# strive

./: pyproject.toml
src/strive/: __init__.py  constants.py
src/strive/cli/: __init__.py  calculate.py  coach.py  convert.py
src/strive/models/: duration.py
src/strive/utils/: __init__.py
tests/: test_duration.py
