[project]
name = "strive"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Ciaran McCormick", email = "ciaran@ciaranmccormick.com" }
]
requires-python = ">=3.10"

dependencies = [
    "click>=8.1.8",
    "pydantic>=2.10.5",
    "rich>=13.9.4",
    "stravalib>=2.1",
    "typer>=0.15.1",
]
[dependency-groups]
dev = [
    "ipdb>=0.13.13",
    "ipython>=8.31.0",
    "pytest>=8.3.4",
    "ruff>=0.8.6",
]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "B"]

[tool.ruff.format]
quote-style = "double"

[project.scripts]
strive = "strive:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

